--- a/BicycleTelemetry/app/src/main/AndroidManifest.xml
+++ b/BicycleTelemetry/app/src/main/AndroidManifest.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.ccs_labs.bicycletelemetry">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="org.ccs_labs.bicycletelemetry">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
-            android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name="org.ccs_labs.bicycletelemetry.MainActivity">
+            android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        android:fullBackupContent="@xml/backup_descriptor">
+        <activity
+            android:name="org.ccs_labs.bicycletelemetry.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -17,5 +22,4 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
