Upgrade project to new Android, Kotlin, Gradle etc.

--- a/BicycleTelemetry/app/src/main/AndroidManifest.xml
+++ b/BicycleTelemetry/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="org.ccs_labs.bicycletelemetry">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -14,7 +13,8 @@
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name="org.ccs_labs.bicycletelemetry.MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
