--- a/BicycleTelemetry/app/src/main/AndroidManifest.xml
+++ b/BicycleTelemetry/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
