--- a/BicycleTelemetry/app/src/main/AndroidManifest.xml
+++ b/BicycleTelemetry/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <application
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
@@ -20,5 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service android:name=".SteeringSensorService"
+            android:exported="false"
+            android:description="@string/service_description"
+            />
     </application>
 </manifest>
